<resources>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="app_name">Park In n Charge</string>
    <string name="facebook_application_id">2663440670435127</string>
    <string name="fb_login_protocol_scheme">fb2663440670435127</string>
    <string name="title_activity_maps">Map</string>
    <string name="posts">Posts</string>
    <string name="profile">Profile</string>
    <string name="logout">logout</string>

    <string name="fragment_profile">Profile</string>
    <string name="fragment_posts">Posts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="public_place_parking">Public Place Parking</string>
    <string name="current_booking">Current Booking</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="switch_owner">Switch to Owner</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="date">Date</string>
    <string name="hint_gender" />
    <string name="male" />
    <string name="female" />
    <string name="btn_sign_up" />
    <string name="btn_link_login" />
    <string name="phone_hint" />
    <string name="dbname_users" />
    <string name="prompt_email" />
    <string name="prompt_password" />
    <string name="ufp" />
    <string name="desc_firebase_lockup" />
    <string name="phone_title_text" />
    <string name="signed_out" />
    <string name="hint_phone_number" />
    <string name="hint_verification_code" />
    <string name="start_phone_auth" />
    <string name="verify_phone_auth" />
    <string name="resend_phone_auth" />
    <string name="sign_out" />
    <string name="date_of_birth">Date of Birth</string>

</resources>
